--- a/src/app/cookBook/cookbook.component.html
+++ b/src/app/cookBook/cookbook.component.html
@@ -1,4 +1,3 @@
-
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 <nav class="navbar navbar-expand-lg navbar-light bg-success ">
   <h1 class="text-white">Cookbook</h1>
@@ -7,109 +6,38 @@
 <div class="container">
   <div class="row">
     <div class="col">
-        <h2>Get all recipes</h2>
-        <button type="button" class="btn btn-raised btn-success" (click)="findAll()">Push</button>
-        <br>
-        <div *ngIf="norecipes==1">
-          <h4>No recipes were found</h4>
-        </div>
-      <div *ngIf="recipes!==[]">
-        <div *ngFor="let recipe of recipes" class="card ml-5  mt-3 d-inline-block" style="width: 18rem; border: 1.5px solid #ccc">
-          <img class="card-img-top" style="height: 150px" [src]="'http://localhost:12000/photos/' + recipe.photo" alt="No photo exist">
-          <div class="card-body">
-            <h5 class="card-title">{{recipe.name}}</h5>
-            <span class="card-text font-weight-bold">Ingredients:</span>
-            <p class="card-text">{{recipe.ingredients}}</p>
-            <p class="card-text">{{recipe.text}}</p>
-            <a routerLink="viewAllVersions" class="btn btn-raised btn-success"  (click)="viewAllVersions(recipe._id)">View all versions</a>
-          </div>
-        </div>
-    </div>
+      <app-get-all></app-get-all>
     </div>
   </div>
   <hr>
   <div class="row">
     <div class="col">
-      <h4>Find recipe by name</h4>
-      <div class="input-group mb-3">
-        <div class="input-group-prepend">
-          <span class="input-group-text mr-1"  id="basic-addon1">Name</span>
-        </div>
-        <input type="text" #name class="form-control" placeholder="Name" aria-label="Username" aria-describedby="basic-addon1">
-        <button  class="btn btn-secondary ml-3 "  (click)="findByName(name)">Find</button>
-      </div>
-
-      <div *ngIf="recipeFoundByName">
-        <ul  class="list-group list-group-flush">
-          <li class="list-group-item"><b>Name:</b> {{recipeFoundByName.name}}</li>
-          <li class="list-group-item"><b>Ingredients:</b> {{recipeFoundByName.ingredients}}</li>
-          <li class="list-group-item"><b>Photo:</b></li>
-            <img class="img-fluid max-width:100%" [src]="'http://localhost:12000/photos/' + recipeFoundByName.photo">
-          <li class="list-group-item"><b>Text:</b> {{recipeFoundByName.text}}</li>
-          <li class="list-group-item"><b>Author: </b>{{recipeFoundByName.author}}</li>
-          <li class="list-group-item"><b>Date of creation: </b>{{recipeFoundByName.dateOfCreation|date}}</li>
-          <a routerLink="/viewAllVersions" class="btn btn-raised btn-success" (click)="viewAllVersions(recipeFoundByName._id)">View all versions</a>
-        </ul>
-      </div>
+      <app-find-by-title></app-find-by-title>
     </div>
   </div>
   <hr>
   <div class="row">
     <div class="col">
-      <form #form="ngForm" (ngSubmit)="create(form)" enctype="multipart/form-data">
-        Name: <input type="text" name="name" ngModel>
-        <br>
-        Ingredients: <input type="text" name="ingredients" ngModel>
-        <br>
-        Photo: <input type="file" name="photo" (change)="fileUploadEvent($event)" ngModel>
-        <br>
-        Text: <input type="text" name="text" ngModel>
-        <br>
-        Author: <input type="text" name="author" ngModel>
-        <br>
-        <button type="submit">Create</button>
-      </form>
+      <app-create></app-create>
+    </div>
+  </div>
+    <hr>
+  <div class="row">
+    <div class="col">
+      <app-update></app-update>
     </div>
   </div>
   <hr>
-      <h4>Update recipes</h4>
-      <form #updateForm="ngForm" (ngSubmit)="update(updateForm)" enctype="multipart/form-data">
-        Name: <input type="text" name="name" ngModel><br>
-        Ingredients: <input type="text" name="ingredients" ngModel><br>
-        Photo: <input type="file" name="photo" (change)="fileUpdateEvent($event)" ngModel><br>
-        Text: <input type="text" name="text" ngModel><br>
-        Author: <input type="text" name="author" ngModel><br>
-        <button type="submit">Update</button>
-      </form>
-      <div *ngIf="updatedRecipe">
-        <ul>
-          <li>Name: {{updatedRecipe.name}}</li>
-          <li>Ingredients: {{updatedRecipe.ingredients}}</li>
-          <li>Photo:<img [src]="'http://localhost:12000/photos/' + updatedRecipe.photo"></li>
-          <li>Text: {{updatedRecipe.text}}</li>
-          <li>Author: {{updatedRecipe.author}}</li>
-          <li>Date of creation: {{updatedRecipe.dateOfCreation|date}}</li>
-        </ul>
+  <div class="row">
+    <div class="col">
+      <app-delete></app-delete>
     </div>
   </div>
-<h4>Delete recipe. Just enter the name of recipe, which you want to delete.</h4>
-<form>
-  <input type="text" #nameToDelete>
-  <button (click)="delete(nameToDelete)">Delete</button>
-</form>
-<div *ngIf="deletedRecipe">
-  <ul>
-    <li>Name: {{deletedRecipe.name}}</li>
-    <li>Ingredients: {{deletedRecipe.ingredients}}</li>
-    <li>Photo:<img [src]="'http://localhost:12000/photos/' + deletedRecipe.photo"></li>
-    <li>Text: {{deletedRecipe.text}}</li>
-    <li>Author: {{deletedRecipe.author}}</li>
-    <li>Date of creation: {{deletedRecipe.dateOfCreation|date}}</li>
-  </ul>
+  <div class="row">
+    <div class="col">
+      <app-delete-all></app-delete-all>
+    </div>
+  </div>
 </div>
-<h4>Delete all recipes</h4>
-<form (ngSubmit)="deleteAllRecipes()">
-  <button type="submit">Delete</button>
-</form>
 
 
