--- a/src/app/cookBook/create/create.component.html
+++ b/src/app/cookBook/create/create.component.html
@@ -4,8 +4,8 @@
   <input class="form-control w-25 mb-2" placeholder="Ingredients" type="text" name="ingredients" ngModel>
   <div class="input-group mb-3">
     <div class="custom-file">
-      <input type="file" name="photo" class="custom-file-input w-25  " id="inputGroupFile01" (change)="fileUploadEvent($event)" ngModel>
-      <label class="custom-file-label w-25 min-width:25% " for="inputGroupFile01">Upload photo</label>
+      <input type="file" name="photo" class="custom-file-input w-25" id="inputGroupFile01" (change)="fileUploadEvent($event)" ngModel>
+      <label class="custom-file-label w-25 " for="inputGroupFile01">Upload photo</label>
     </div>
   </div>
   <input class="form-control w-25 mb-2" placeholder="Text" type="text" name="text" ngModel>
