--- a/src/app/cookBook/find-by-title/find-by-title.component.html
+++ b/src/app/cookBook/find-by-title/find-by-title.component.html
@@ -7,7 +7,7 @@
   <button  class="btn btn-secondary ml-1" [disabled]="inputValue==''" (click)="findByName(name)">Find</button>
 </div>
 <div *ngIf="recipeFoundByName">
-  <div class="card ml-5  mt-3 d-inline-block" style="width: 18rem; border: 1.5px solid #ccc">
+  <div class="card ml-5  mt-3 d-inline-flex" style="width: 18rem; border: 1.5px solid #ccc">
     <img class="card-img-top" style="height: 150px" [src]="'http://localhost:12000/photos/' + recipeFoundByName.photo" alt="No photo exist">
     <div class="card-body">
       <h5 class="card-title">{{recipeFoundByName.name}}</h5>
