--- a/src/app/cookBook/get-all/get-all.component.html
+++ b/src/app/cookBook/get-all/get-all.component.html
@@ -4,7 +4,7 @@
   <h4>No recipes were found</h4>
 </div>
 <div *ngIf="recipes!==[]">
-  <div *ngFor="let recipe of recipes" class="card ml-5  mt-3 d-inline-block" style="width: 18rem; border: 1.5px solid #ccc">
+  <div *ngFor="let recipe of recipes" class="card ml-5  mt-3 d-inline-flex" style="width: 18rem; border: 1.5px solid #ccc">
     <img class="card-img-top" style="height: 180px" [src]="'http://localhost:12000/photos/' + recipe.photo" alt="No photo exist">
     <div class="card-body ">
       <h5 class="card-title">{{recipe.name}}</h5>
