--- a/src/app/version/version.component.html
+++ b/src/app/version/version.component.html
@@ -13,7 +13,7 @@
   <div class="row">
     <div class="col">
       <h2>All versions of recipe</h2>
-      <div *ngFor="let recipe of versions"  class="card ml-5  mt-3 mb-2 d-inline-block"  style="width: 25rem; border: 1.5px solid #ccc">
+      <div *ngFor="let recipe of versions"  class="card ml-5  mt-3 mb-2 d-inline-flex"  style="width: 25rem; border: 1.5px solid #ccc">
         <img class="card-img-top"  [src]="'http://localhost:12000/photos/' + recipe.photo" alt="No photo exist">
         <div class="card-body">
           <h5 class="card-title">{{recipe.name}}</h5>
