--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-<nav class="navbar  navbar-light bg-success">
+<nav class="navbar pr-4  navbar-light bg-success">
   <h1 class="text-white">Cookbook</h1>
   <nav class="mt-2">
     <app-find-by-title></app-find-by-title></nav>
