--- a/src/app/cookBook/cookbook.component.html
+++ b/src/app/cookBook/cookbook.component.html
@@ -6,12 +6,9 @@
   </div>
   <hr>
   <div class="row">
-    <div class="col">
+    <div class="col" style="border-right: 0.5px solid #d6d6d6">
       <app-create></app-create>
     </div>
-  </div>
-    <hr>
-  <div class="row">
     <div class="col">
       <app-update></app-update>
     </div>
