--- a/src/app/cookBook/create-c/create-c.component.html
+++ b/src/app/cookBook/create-c/create-c.component.html
@@ -23,9 +23,9 @@
     </div>
   </div>
   <div class="row" *ngIf="createdRecipe">
-    <div class="col" >
-      <div class="card ml-5 mb-5  mt-3" style="width: 18rem; border: 1.5px solid #ccc">
-        <img class="card-img-top" style="height: 150px" [src]="'http://localhost:12000/photos/' + createdRecipe.photo" alt="No photo exist">
+    <div class="col-md-4 offset-md-4">
+      <div class="card ml-5 mb-4  mt-3 d-inline-block" style="width: 23rem; border: 1.5px solid #ccc">
+        <img class="card-img-top" style="height: 200px" [src]="'http://localhost:12000/photos/' + createdRecipe.photo" alt="No photo exist">
         <div class="card-body">
           <h5 class="card-title">{{createdRecipe.name}}</h5>
           <span class="card-text font-weight-bold">Ingredients:</span>
@@ -35,4 +35,5 @@
         </div>
       </div>
     </div>
+</div>
 </div>
