--- a/src/app/cookBook/update2/update2.component.html
+++ b/src/app/cookBook/update2/update2.component.html
@@ -1,26 +1,43 @@
-<form #updateForm="ngForm" (ngSubmit)="update(updateForm)" enctype="multipart/form-data">
-  <input class="form-control w-25 mb-2" placeholder="Title" type="text" name="name" ngModel>
-  <input class="form-control w-25 mb-2" placeholder="Ingredients" type="text" name="ingredients" ngModel>
-  <div class="input-group mb-3">
-    <div class="custom-file">
-      <input type="file" class="custom-file-input w-25" name="photo" id="inputGroupFile02" (change)="fileUpdateEvent($event)" ngModel>
-      <label class="custom-file-label w-25" for="inputGroupFile02">Upload photo</label>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <button routerLink="/" class="btn btn-raised btn-success">Back</button>
     </div>
   </div>
-  <input class="form-control w-25 mb-2" placeholder="Text" type="text" name="text" ngModel>
-  <input class="form-control w-25 mb-2" placeholder="Author" type="text" name="author" ngModel>
-
-</form>
-<div *ngIf="updatedRecipe">
-  <div class="card ml-5  mt-3 d-inline-block" style="width: 18rem; border: 1.5px solid #ccc">
-    <img class="card-img-top" style="height: 150px" [src]="'http://localhost:12000/photos/' + updatedRecipe.photo" alt="No photo exist">
-    <div class="card-body">
-      <h5 class="card-title">{{updatedRecipe.name}}</h5>
-      <span class="card-text font-weight-bold">Ingredients:</span>
-      <p class="card-text">{{updatedRecipe.ingredients}}</p>
-      <p class="card-text">{{updatedRecipe.text}}</p>
-      <p class="card-text text-muted text-right">{{updatedRecipe.dateOfCreation|date:'medium'}}</p>
-      <a routerLink="viewAllVersions" class="btn btn-raised btn-success"  (click)="viewAllVersions(updatedRecipe._id)">View all versions</a>
+  <br>
+  <div class="row text-center">
+    <div class="col-md-5 offset-md-4">
+      <form #updateForm="ngForm" (ngSubmit)="update(updateForm)" enctype="multipart/form-data">
+        <input class="form-control  mb-2" placeholder="Title" type="text" name="name" ngModel>
+        <input class="form-control  mb-2" placeholder="Ingredients" type="text" name="ingredients" ngModel>
+        <div class="input-group mb-3">
+          <div class="custom-file">
+            <input type="file" class="custom-file-input " name="photo" id="inputGroupFile02"
+                   (change)="fileUpdateEvent($event)" ngModel>
+            <label class="custom-file-label text-left" for="inputGroupFile02">Upload photo</label>
+          </div>
+        </div>
+        <input class="form-control  mb-2" placeholder="Text" type="text" name="text" ngModel>
+        <input class="form-control  mb-2" placeholder="Author" type="text" name="author" ngModel>
+      </form>
+      <button class="btn btn-raised btn-success" (click)="update(updateForm)">Update</button>
+    </div>
+  </div>
+  <div *ngIf="updatedRecipe" class="row">
+    <div class="col-md-4 offset-md-4">
+      <div class="card ml-5 mb-4   mt-3 d-inline-block" style="width: 23rem; border: 1.5px solid #ccc">
+        <img class="card-img-top" style="height: 200px" [src]="'http://localhost:12000/photos/' + updatedRecipe.photo"
+             alt="No photo exist">
+        <div class="card-body">
+          <h5 class="card-title">{{updatedRecipe.name}}</h5>
+          <span class="card-text font-weight-bold">Ingredients:</span>
+          <p class="card-text">{{updatedRecipe.ingredients}}</p>
+          <p class="card-text">{{updatedRecipe.text}}</p>
+          <p class="card-text text-muted text-right">{{updatedRecipe.dateOfCreation|date:'medium'}}</p>
+          <a routerLink="viewAllVersions" class="btn btn-raised btn-success"
+             (click)="viewAllVersions(updatedRecipe._id)">View all versions</a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
