--- a/src/app/cookBook/create-c/create-c.component.html
+++ b/src/app/cookBook/create-c/create-c.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <button routerLink="/" class="btn btn-raised btn-success">Back</button>
+      <button routerLink="/" style="width:6rem"  class="btn btn-raised btn-success">Back</button>
     </div>
   </div>
   <br>
