--- a/src/app/version/version.component.html
+++ b/src/app/version/version.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <button  class="btn btn-raised btn-success mb-2" routerLink="/">Back</button>
+      <button  class="btn btn-raised btn-success mb-2" style="width:6rem"  routerLink="/">Back</button>
     </div>
   </div>
   <div class="row">
