--- a/src/app/cookBook/delete2/delete2.component.html
+++ b/src/app/cookBook/delete2/delete2.component.html
@@ -13,7 +13,7 @@
             <span class="input-group-text mr-1" id="basic-addon2">Title</span>
           </div>
           <input type="text" #nameToDelete class="form-control" aria-label="Username" aria-describedby="basic-addon2">
-          <button class="btn btn-raised btn-success ml-2" (click)="delete(nameToDelete)">Delete</button>
+          <button class="btn btn-raised btn-success ml-2" [disabled]="inputValue==''"  (click)="delete(nameToDelete)">Delete</button>
         </div>
       </form>
     </div>
@@ -46,4 +46,3 @@
     </div>
   </div>
 </div>
-
