Fix sort. Fix bugs in layout.

--- a/src/app/cookBook/cookbook.component.html
+++ b/src/app/cookBook/cookbook.component.html
@@ -1,11 +1,9 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <app-get-all></app-get-all>
-    </div>
+<div class="container ">
+  <div class="row mr-0">
+  <app-get-all></app-get-all>
   </div>
   <hr>
-  <div class="row">
+  <div class="row ml-5">
     <div class="col" style="border-right: 0.5px solid #d6d6d6">
       <app-create></app-create>
     </div>
@@ -14,7 +12,7 @@
     </div>
   </div>
   <hr>
-  <div class="row">
+  <div class="row ml-5">
     <div class="col">
       <app-delete></app-delete>
     </div>
