--- a/src/app/cookBook/update2/update2.component.html
+++ b/src/app/cookBook/update2/update2.component.html
@@ -34,9 +34,9 @@
           <p class="card-text">{{updatedRecipe.ingredients}}</p>
           <p class="card-text">{{updatedRecipe.text}}</p>
           <p class="card-text text-muted text-right">{{updatedRecipe.dateOfCreation|date:'medium'}}</p>
-          <a routerLink="/viewAllVersions" class="btn btn-raised btn-success"
-             (click)="viewAllVersions(updatedRecipe._id)">View all versions</a>
         </div>
+        <a routerLink="/viewAllVersions" class="ml-5 mr-5 mb-3 btn btn-raised btn-success"
+           (click)="viewAllVersions(updatedRecipe._id)">View all versions</a>
       </div>
     </div>
   </div>
