--- a/src/app/cookBook/update2/update2.component.html
+++ b/src/app/cookBook/update2/update2.component.html
@@ -35,7 +35,7 @@
           <p class="card-text">{{updatedRecipe.text}}</p>
           <p class="card-text text-muted text-right">{{updatedRecipe.dateOfCreation|date:'medium'}}</p>
         </div>
-        <a routerLink="/viewAllVersions" class="ml-5 mr-5 mb-3 btn btn-raised btn-success"
+        <a routerLink="/viewAllVersions" class="ml-3 mb-3 btn btn-raised btn-success"
            (click)="viewAllVersions(updatedRecipe._id)">View all versions</a>
       </div>
     </div>
